[package]
name = "olsync"
version = "0.2.1"
edition = "2021"
authors = ["Konrad Höffner <konrad.hoeffner@uni-leipzig.de>"]
description = "Generate an OLS YAML configuration file from an existing OLS instance"
readme = "README.md"
repository = "https://github.com/annosaxfdm/olsync/"
license = "MIT"
keywords = ["ontology"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.66"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version= "0.11.10", features=["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[profile.release]
lto = true
